Update styles & template to fix height problem on mobile

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 @font-face {
     font-family: 'Inter';
-    font-style:  normal;
+    font-style: normal;
     font-weight: 400;
     font-display: swap;
     src: url("./inter/Inter-Regular.woff2") format("woff2"),
-         url("./inter/Inter-Regular.woff") format("woff");
-  }
+        url("./inter/Inter-Regular.woff") format("woff");
+}
+
 *,
 *::before,
 *::after {
@@ -19,6 +20,9 @@
 html,
 body {
     height: 100%;
+    height: 100vh;
+    height: -webkit-fill-available;
+    height: fill-available;
     width: 100%;
     background-image: url(bg-gradient.png);
     background-repeat: no-repeat;
@@ -166,12 +170,12 @@ body {
         transform: scale(1.1);
         transition: transform .3s ease;
     }
-    
-    
-    
+
+
+
     .link-item:hover {
         transform: scale(1.1);
         transition: transform .3s ease;
     }
-    
+
 }
